[gd_scene load_steps=6 format=3 uid="uid://dpqpfrvnuslh7"]

[ext_resource type="PackedScene" uid="uid://73vkj3ho7ou5" path="res://scenes/GUI/tooltips/gui_tooltip.tscn" id="1_b3hsu"]
[ext_resource type="Script" uid="uid://3erm6d3b1a8r" path="res://scenes/GUI/tooltips/gui_enemy_preview_tooltip.gd" id="2_v8jas"]
[ext_resource type="PackedScene" uid="uid://lqyrsed1ptvb" path="res://scenes/GUI/bingo_main/character_boxes/components/gui_attack_icon.tscn" id="3_2p60d"]
[ext_resource type="Texture2D" uid="uid://dgbr5rmxdmpib" path="res://resources/sprites/icons/resources/heart.png" id="3_b3hsu"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="4_v8jas"]

[node name="GUIEnemyPreviewTooltip" instance=ExtResource("1_b3hsu")]
script = ExtResource("2_v8jas")

[node name="GUIPanelBackgroundColor" parent="." index="0"]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="NameLabel" type="Label" parent="ContentContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"HUD_small"
text = "Some name"
vertical_alignment = 2

[node name="MaxHealth" type="HBoxContainer" parent="ContentContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Heart" type="TextureRect" parent="ContentContainer/VBoxContainer/HBoxContainer/MaxHealth" index="0"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("3_b3hsu")
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="ContentContainer/VBoxContainer/HBoxContainer/MaxHealth" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_small"
theme_override_colors/font_color = Color(0.960784, 0.333333, 0.364706, 1)

[node name="GUITooltipDescriptionSaparator" parent="ContentContainer/VBoxContainer" index="1" instance=ExtResource("4_v8jas")]
layout_mode = 2

[node name="AttackContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2

[node name="GUIAttackIcon" parent="ContentContainer/VBoxContainer/AttackContainer" index="0" instance=ExtResource("3_2p60d")]
layout_mode = 2

[node name="GUIAttackIcon2" parent="ContentContainer/VBoxContainer/AttackContainer" index="1" instance=ExtResource("3_2p60d")]
layout_mode = 2
